kubernetes/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: jgoodhcg
  name: jgoodhcg
