kubernetes/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: umeng
  labels:
    app: umeng
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 3000
    targetPort: 3000
    protocol: TCP
  selector:
    app: umeng
---
apiVersion: v1
kind: Service
metadata:
  name: umeng-external-name
  annotations:
    external-dns.alpha.kubernetes.io/hostname: dreamcatcher.danmanners.com
    external-dns.alpha.kubernetes.io/ttl: "300"
  labels:
    app: umeng
spec:
  type: ExternalName
  externalName: kube.danmanners.com
  sessionAffinity: None
